--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="jumbotron text-center">
-    <h1>TK</h1>
+    <h1>TK teszt</h1>
 </div>
 <div class="container">
     <div class="row">
